# w3name-rust-client

./: .gitignore  .release-please-manifest.json  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.build  Dockerfile.test  README.md  build-macos.sh  build.rs  ci.cue  cross-install-deps.sh  flake.nix  release-please-config.json
.cargo/: config
.github/: upload-release.sh
.github/workflows/: build_cli.yml  cargo-publish.yml  ci.yml  conventional_commits.yml  release-binaries.yml  release-please.yml  release-plz.yml  release.yml
cue.mod/: ci-rust.cue
src/: client.rs  lib.rs  name.rs  revision.rs
src/ipns/: ipns_pb.proto  mod.rs
w3name/: CHANGELOG.md  Cargo.toml  README.md  build.rs
w3name-cli/: CHANGELOG.md  Cargo.toml  README.md
w3name-cli/src/: main.rs  resolve.rs
w3name/src/: client.rs  error.rs  hash.rs  lib.rs  name.rs  revision.rs
w3name/src/ipns/: ipns_pb.proto  mod.rs
