[package]
name = "w3name-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libp2p-core = "0.36.0"
cid = "0.8.6"
multibase = "0.9.1"
multihash = { version = "0.16", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }