[package]
name = "w3name-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libp2p-core = "0.36.0"
cid = "0.8.6"
multibase = "0.9.1"
multihash = { version = "0.16", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }
prost = "0.10"
libipld = "0.14.0"
base64 = "0.13.0"
serde = "1.0.144"
chrono = "0.4.22"

# TODO: put these behind a feature flag? They're only needed for the client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
governor = "0.4.2"
nonzero_ext = "0.3.0"

[build-dependencies]
prost-build = { version = "0.10" }