[package]
name = "w3name-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
error-stack = "0.1.1"

w3name = { path = "../w3name" }
