[package]
name = "w3name-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "w3name"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
error-stack = "0.1.1"

w3name = { version = "0.1.0", path = "../w3name" }
