[package]
name = "w3name-cli"
version = "0.1.3"
homepage = "https://github.com/yusefnapora/w3name-rust-client"
repository = "https://github.com/yusefnapora/w3name-rust-client"
description = "A command-line tool for publishing and verifying name records with the w3name service"
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "w3name"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
error-stack = "0.1.1"

w3name = { version = "0.1.3", path = "../w3name" }
