[package]
name = "w3name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libp2p-core = "0.36.0"
cid = "0.8.6"
multibase = "0.9.1"
multihash = { version = "0.16", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }
prost = "0.10"
base64 = "0.13.0"
serde = "1.0.144"
serde_cbor = "0.10"
serde_bytes = "0.11"
chrono = "0.4.22"
error-stack = "0.1.1"

# we depend indirectly on openssl, but adding an explicit dep with the "vendored" feature
# lets us cross-compile for aarch64 on an x86_64 host.
# many thanks to the author of this post: https://obviy.us/blog/2022/cross-compiling-rust-on-gha/
openssl = { version = "0.10", features = ["vendored"] }

# TODO: put these behind a feature flag? They're only needed for the client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
governor = "0.4.2"
nonzero_ext = "0.3.0"

[build-dependencies]
prost-build = { version = "0.10" }