[package]
name = "w3name"
version = "0.1.6"
description = "A client library for the w3name service"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yusefnapora/w3name-rust-client"
repository = "https://github.com/yusefnapora/w3name-rust-client"
keywords = ["w3name", "IPNS", "IPFS", "web3"]
edition = "2021"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "feature=protoc-src"]

[features]
protoc-src = ["dep:protobuf-src"]

[dependencies]

libp2p-core = "0.36.0"
cid = "0.8.6"
multibase = "0.9.1"
multihash = { version = "0.16", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }
prost = "0.10"
base64 = "0.13.0"
serde = "1.0.144"
serde_cbor = "0.10"
serde_bytes = "0.11"
chrono = "0.4.22"
error-stack = "0.1.1"

# we depend indirectly on openssl, but adding an explicit dep with the "vendored" feature
# lets us cross-compile for aarch64 on an x86_64 host.
# many thanks to the author of this post: https://obviy.us/blog/2022/cross-compiling-rust-on-gha/
#
# note that this apparently requires perl to be installed to build openssl
openssl = { version = "0.10", features = ["vendored"] }

# TODO: put these behind a feature flag? They're only needed for the client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
governor = "0.4.2"
nonzero_ext = "0.3.0"

[build-dependencies]
prost-build = { version = "0.10" }
protobuf-src = { version = "1.1.0", optional = true }